--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
         <activity
                 android:name=".activity.MainActivity"
+                android:launchMode="singleTop"
                 android:label="@string/app_name"
                 android:theme="@style/AppTheme.NavDrawer">
             <intent-filter>
