--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
           package="com.app4fun.carros">
 
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
             android:name=".CarrosApplication"
@@ -13,7 +14,12 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             android:usesCleartextTraffic="true">
-        <activity android:name=".activity.CarroActivity" android:parentActivityName=".activity.MainActivity">
+        <activity android:name=".activity.CarroFormActivity"
+                  android:parentActivityName=".activity.MainActivity">
+        </activity>
+        <activity
+                android:name=".activity.CarroActivity"
+                android:parentActivityName=".activity.MainActivity">
         </activity>
         <activity
                 android:name=".activity.SiteLivroActivity"
@@ -25,8 +31,8 @@
         </activity>
         <activity
                 android:name=".activity.MainActivity"
-                android:launchMode="singleTop"
                 android:label="@string/app_name"
+                android:launchMode="singleTop"
                 android:theme="@style/AppTheme.NavDrawer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
